SSP-2166 Fixed alignment of the marked (yellow) text in the autocomplete list

--- a/theme/internallinkform.css
+++ b/theme/internallinkform.css
@@ -73,6 +73,7 @@
         }
 
             & .awesomplete mark {
+				vertical-align: baseline;
                 background: hsl(65, 100%, 50%);
             }
 }
